[Fix]style in dark mode

--- a/src/style.scss
+++ b/src/style.scss
@@ -209,9 +209,11 @@ body:not(:fullscreen) #escFullscreen {
   overflow-x: auto;
   white-space: nowrap;
 }
+.btn-flat{
+  color: var(--grayText);
+}
 .share .btn-flat {
   padding: 0 7px;
-  color: var(--grayText);
 }
 ::-webkit-scrollbar {
   width: 5px;
@@ -704,16 +706,16 @@ body.dark {
   --green: #4db6ac;
   --grayText: rgb(216, 215, 215);
 }
-body.dark .modal,
-body.dark .modal .modal-content,
-body.dark .modal .modal-footer,
+body.dark .myModal,
+body.dark .myModal .myModal-content,
+body.dark .myModal .myModal-footer,
 body.dark .tabs {
   background-color: var(--bgColor);
 }
-body.dark .modal .modal-footer * {
+body.dark .myModal .myModal-footer * {
   color: var(--fontColor);
 }
-body.dark .modal .section {
+body.dark .myModal .section {
   background-color: rgb(51, 51, 51);
 }
 body.dark .timepicker-plate {
